--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -7,6 +7,8 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/splash" />
+            android:src="@drawable/splash"/>
+            <!-- android:src="@drawable/splashGIF" -->
+
     </item>
 </layer-list>
